# script_bank

./: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test_bq_connection.py
config/: feature_config.json  settings.py  weights.json
core/: __init__.py  data_loader.py  scorer.py
docs/: scoring_design.md
examples/: basic_usage.py  batch_processing.py  bigquery_example.py  bigquery_integration.py  custom_weights_example.py
notebooks/: score_analysis.ipynb
part_priority_scoring/: __init__.py
part_priority_scoring/config/: __init__.py  feature_config.yaml  pipeline_config.yaml  settings.py  weights.yaml
part_priority_scoring/core/: data_loader.py  feature_engineer.py  scorer.py
part_priority_scoring/utils/: __init__.py  validator.py
scripts/: data_loader.py  etl_pipeline.py  feature_engineering.py  monitor.py  run_scoring.py  scoring.py
sql/: create_output_table.sql  csv_test_sample.sql  demand_sample.sql  extract_test_sample.sql  incremental_scoring.sql  panda_sample.sql  sample_demand.sql  sample_panda.sql  score_analysis.sql  scoring_batch.sql
src/core/: enhanced_data_loader.py  enhanced_scorer.py
src/pipeline/: production_etl.py
src/utils/: logging_config.py  validators.py
tests/: __init__.py  test_data_loader.py  test_features.py  test_integration.py  test_pipeline.py  test_scorer.py  test_scoring.py
tests/csv_test/: DEV_SAMPLE_scoring_test_results.csv  csv_test_scoring.py  part_scores_only.csv
