[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "part-priority-scoring"
version = "1.0.0"
description = "Part priority scoring module for electronic components"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "google-cloud-bigquery>=3.11.0",
    "pyyaml>=6.0",
]
dynamic = ["readme", "authors", "classifiers"]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]